# windtunnel

./: Cargo.toml  debug.sh  release.sh  win.sh
assets/shaders/: pressure_field.wgsl
src/: grid.rs  main.rs  solver.rs  structured_grid.rs  visualizers.rs
